update to use jitpack and auto-detect jdk profiles